--- a/Styles/style.css
+++ b/Styles/style.css
@@ -24,6 +24,20 @@ a {
   text-transform: uppercase;
 }
 
+.menu-btn {
+  width: 3rem;
+  height: 3rem;
+  flex-direction: column;
+  justify-content: space-around;
+  display: none;
+}
+
+.menu-btn span {
+  width: 100%;
+  height: 3px;
+  background-color: #fff;
+}
+
 #main-header ul {
   list-style: none;
   display: flex;
@@ -44,6 +58,43 @@ a {
   color: rgb(228, 163, 44);
 }
 
+#side-drawer {
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(29, 26, 27);
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+}
+
+#side-drawer:target {
+  display: block;
+}
+
+#side-drawer header {
+  height: 5rem;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0 5%;
+}
+
+#side-drawer ul {
+  margin: 0;
+  padding: 4rem 1rem;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+#side-drawer a {
+  color: rgb(253, 239, 213);
+  font-size: 2rem;
+}
+
 main h1 {
   text-align: center;
   color: rgb(238, 164, 80);
@@ -55,53 +106,60 @@ main h1 {
   margin: 2rem auto;
 }
 
-#latest-products ul{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1.25rem;
-    margin: 0;
-    padding: 0;
+#latest-products ul {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1.25rem;
+  margin: 0;
+  padding: 0;
 }
 
-.food-item{
-    background-color: rgb(228, 206, 182);
-    border-radius: 6px;
-    overflow: hidden;
+.food-item {
+  background-color: rgb(228, 206, 182);
+  border-radius: 6px;
+  overflow: hidden;
 }
 
-.food-item img{
-    height: 18rem;
-    width: 100%;
-    object-fit: cover;
+.food-item h2 {
+  margin-bottom: 2rem;
 }
 
-.food-item-content{
-    padding: 1.2rem;
-    text-align: center;
+.food-item img {
+  height: 18rem;
+  width: 100%;
+  object-fit: cover;
 }
 
-.btn{
-    background-color: rgb(228, 157, 44);
-    color: #fff;
-    border-radius: 4px;
-    padding: .5rem 1.5rem;
+.food-item-content {
+  padding: 1.2rem;
+  text-align: center;
 }
 
-.btn:hover{
-    background-color: rgb(221, 134,34);
+.btn {
+  background-color: rgb(228, 157, 44);
+  color: #fff;
+  border-radius: 4px;
+  padding: 0.5rem 1.5rem;
 }
 
+.btn:hover {
+  background-color: rgb(221, 134, 34);
+}
 
 @media (max-width: 48rem) {
-  #latest-products ul{
+  #latest-products ul {
     grid-template-columns: 100%;
   }
 
-  main h1{
+  main h1 {
     font-size: 1.5rem;
   }
 
-  #main-header nav{
+  .menu-btn {
+    display: flex;
+  }
+
+  #main-header nav {
     display: none;
   }
 }
