--- a/Styles/style.css
+++ b/Styles/style.css
@@ -102,7 +102,7 @@ main h1 {
 }
 
 #latest-products {
-  width: 70%;
+  width: 40%;
   margin: 2rem auto;
 }
 
@@ -161,5 +161,9 @@ main h1 {
 
   #main-header nav {
     display: none;
+  }
+
+  #latest-products {
+    width: 90%;
   }
 }
